Use File instead of String path in Gradle plugin